force-app/main/default/objects/Billing_Documents__c/Billing_Documents__c.object-meta.xml
<CustomObject>
    <label>Billing Documents</label>
    <nameField>
        <displayFormat>BD-{00000000}</displayFormat>
        <label>Billing Documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>