force-app/main/default/objects/Billing_Documents__c/fields/Agreement_for_Energy_Services_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_for_Energy_Services_Number__c</fullName>
    <label>Agreement for Energy Services Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>