force-app/main/default/objects/Billing_Documents__c/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>When was the document created?</description>
    <inlineHelpText>When was the document created?</inlineHelpText>
    <label>Billing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>