force-app/main/default/objects/Billing_Documents__c/fields/Consultant_Account__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be a consultant account.</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>CES Consultant Referral Fee</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consultant</value>
        </filterItems>
        <infoMessage>Please select a Consultant Account.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Documents</relationshipLabel>
    <relationshipName>Billing_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>