force-app/main/default/objects/Billing_Documents__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CES Customer Account</description>
    <inlineHelpText>CES Customer Account</inlineHelpText>
    <label>Customer Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>CES Customer should be a business account.</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>CES Consultant Referral Fee</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Account</value>
        </filterItems>
        <infoMessage>Please select a Business Account.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Documents (Customer Account)</relationshipLabel>
    <relationshipName>Billing_Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>