force-app/main/default/objects/Billing_Documents__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date that this bill is due by.</description>
    <formula>Billing_Date__c  + 30</formula>
    <inlineHelpText>The date that this bill is due by.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>