force-app/main/default/objects/Billing_Documents__c/fields/End_of_billing_period__c.field-meta.xml
<CustomField>
    <fullName>End_of_billing_period__c</fullName>
    <label>End of billing period</label>
    <type>Date</type>
</CustomField>