force-app/main/default/objects/Billing_Documents__c/fields/Final__c.field-meta.xml
<CustomField>
    <fullName>Final__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Once a bill doc is marked final, there should be no further changes</description>
    <inlineHelpText>Once a bill doc is marked final, there should be no further changes</inlineHelpText>
    <label>Final</label>
    <type>Checkbox</type>
</CustomField>