force-app/main/default/objects/Billing_Documents__c/fields/Is_Rebill_Document__c.field-meta.xml
<CustomField>
    <fullName>Is_Rebill_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this is a rebill</description>
    <inlineHelpText>Indicates that this is a rebill</inlineHelpText>
    <label>Is Rebill Document</label>
    <type>Checkbox</type>
</CustomField>