force-app/main/default/objects/Billing_Documents__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid?</label>
    <type>Checkbox</type>
</CustomField>