force-app/main/default/objects/Billing_Documents__c/fields/Rebill_of__c.field-meta.xml
<CustomField>
    <fullName>Rebill_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a rebill of what original bill doc?</description>
    <inlineHelpText>This is a rebill of what original bill doc?</inlineHelpText>
    <label>Rebill of</label>
    <referenceTo>Billing_Documents__c</referenceTo>
    <relationshipLabel>Rebills</relationshipLabel>
    <relationshipName>OriginalBillDoc</relationshipName>
    <type>Lookup</type>
</CustomField>