force-app/main/default/objects/Billing_Documents__c/fields/REP_Profile__c.field-meta.xml
<CustomField>
    <fullName>REP_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which REP is this billing document associated with?</description>
    <inlineHelpText>Which REP is this billing document associated with?</inlineHelpText>
    <label>REP Profile</label>
    <referenceTo>REP_Profile__c</referenceTo>
    <relationshipLabel>Billing Documents</relationshipLabel>
    <relationshipName>Billing_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>