force-app/main/default/objects/Billing_Documents__c/fields/SAP_ARO_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_ARO_Number__c</fullName>
    <description>SAP number for payment document.</description>
    <inlineHelpText>SAP number for payment document.</inlineHelpText>
    <label>SAP ARO Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>