force-app/main/default/objects/Billing_Documents__c/fields/SAP_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Invoice_Number__c</fullName>
    <description>Which invoice is this bill document associated with?</description>
    <inlineHelpText>Which invoice is this bill document associated with?</inlineHelpText>
    <label>SAP Invoice Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>