force-app/main/default/objects/Billing_Documents__c/fields/Start_of_billing_period__c.field-meta.xml
<CustomField>
    <fullName>Start_of_billing_period__c</fullName>
    <label>Start of billing period</label>
    <type>Date</type>
</CustomField>