force-app/main/default/objects/Billing_Documents__c/fields/Transation_Type__c.field-meta.xml
<CustomField>
    <fullName>Transation_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Index</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>