force-app/main/default/objects/Billing_Documents__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Is this a normal billing document, a credit memo back to the REP, or a short-pay adjustment for a previous balance?</description>
    <inlineHelpText>Is this a normal billing document, a credit memo back to the REP, or a short-pay adjustment for a previous balance?</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Short-Pay Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>