force-app/main/default/objects/Billing_Documents__c/fields/Unit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Unit_Fee__c</fullName>
    <description>Consultant Unit Fee in $/Dth</description>
    <inlineHelpText>Consultant Unit Fee in $/Dth</inlineHelpText>
    <label>Unit Fee</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>