force-app/main/default/objects/Billing_Documents__c/fields/Void__c.field-meta.xml
<CustomField>
    <fullName>Void__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Void</label>
    <type>Checkbox</type>
</CustomField>