force-app/main/default/objects/Billing_Documents__c/recordTypes/CES_Consultant_Referral_Fee.recordType-meta.xml
<RecordType>
    <fullName>CES_Consultant_Referral_Fee</fullName>
    <active>true</active>
    <description>Consultant payment documents</description>
    <label>CES Consultant Referral Fee</label>
</RecordType>