force-app/main/default/objects/Billing_Documents__c/recordTypes/Deal_Ticket.recordType-meta.xml
<RecordType>
    <fullName>Deal_Ticket</fullName>
    <active>true</active>
    <description>For CES gas position management</description>
    <label>Deal Ticket</label>
</RecordType>