force-app/main/default/objects/Billing_Documents__c/recordTypes/TrueCost_Billing_Document.recordType-meta.xml
<RecordType>
    <fullName>TrueCost_Billing_Document</fullName>
    <active>true</active>
    <label>TrueCost Billing Document</label>
</RecordType>