force-app/main/default/objects/Billing_Documents__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>REP_Profile__c</columns>
    <columns>Billing_Date__c</columns>
    <columns>Start_of_billing_period__c</columns>
    <columns>End_of_billing_period__c</columns>
    <columns>Amount__c</columns>
    <columns>Due_Date__c</columns>
    <columns>SAP_ARO_Number__c</columns>
    <columns>SAP_Invoice_Number__c</columns>
    <columns>Paid__c</columns>
    <columns>Final__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>