force-app/main/default/objects/Billing_Documents__c/listViews/Consultant_Referral_Fee_Documents.listView-meta.xml
<ListView>
    <fullName>Consultant_Referral_Fee_Documents</fullName>
    <columns>NAME</columns>
    <columns>Consultant_Account__c</columns>
    <columns>Customer_Account__c</columns>
    <columns>State__c</columns>
    <columns>Transation_Type__c</columns>
    <columns>Agreement_for_Energy_Services_Number__c</columns>
    <columns>Billing_Date__c</columns>
    <columns>Start_of_billing_period__c</columns>
    <columns>End_of_billing_period__c</columns>
    <columns>Unit_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Billing_Documents__c.CES_Consultant_Referral_Fee</value>
    </filters>
    <label>Consultant Referral Fee Documents</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>