force-app/main/default/objects/Billing_Documents__c/listViews/Deal_Tickets.listView-meta.xml
<ListView>
    <fullName>Deal_Tickets</fullName>
    <columns>NAME</columns>
    <columns>REP_Profile__c</columns>
    <columns>Billing_Date__c</columns>
    <columns>Start_of_billing_period__c</columns>
    <columns>End_of_billing_period__c</columns>
    <columns>Amount__c</columns>
    <columns>Due_Date__c</columns>
    <columns>SAP_ARO_Number__c</columns>
    <columns>SAP_Invoice_Number__c</columns>
    <columns>Paid__c</columns>
    <columns>Final__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Billing_Documents__c.Deal_Ticket</value>
    </filters>
    <label>Deal Tickets</label>
</ListView>