force-app/main/default/objects/Billing_Documents__c/listViews/Past_Due_TrueCost.listView-meta.xml
<ListView>
    <fullName>Past_Due_TrueCost</fullName>
    <columns>NAME</columns>
    <columns>REP_Profile__c</columns>
    <columns>Billing_Date__c</columns>
    <columns>Start_of_billing_period__c</columns>
    <columns>End_of_billing_period__c</columns>
    <columns>Amount__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Paid__c</columns>
    <columns>SAP_ARO_Number__c</columns>
    <columns>SAP_Invoice_Number__c</columns>
    <columns>Final__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Billing_Documents__c.TrueCost_Billing_Document</value>
    </filters>
    <filters>
        <field>Paid__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Past Due TrueCost Billing Documents</label>
</ListView>