force-app/main/default/objects/Billing_Documents__c/listViews/TrueCost_Mo.listView-meta.xml
<ListView>
    <fullName>TrueCost_Mo</fullName>
    <columns>NAME</columns>
    <columns>REP_Profile__c</columns>
    <columns>Billing_Date__c</columns>
    <columns>Start_of_billing_period__c</columns>
    <columns>End_of_billing_period__c</columns>
    <columns>Amount__c</columns>
    <columns>Paid__c</columns>
    <columns>Due_Date__c</columns>
    <columns>SAP_ARO_Number__c</columns>
    <columns>SAP_Invoice_Number__c</columns>
    <columns>Final__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Billing_Documents__c.TrueCost_Billing_Document</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>All TrueCost Billing Documents (Monthly)</label>
    <language>en_US</language>
</ListView>